MarkdownRenderer/MarkdownRenderer.Mermaid/NativeInterop.Generated.cs

// <auto-generated />
// Generated from native/abi/mmir-v1.json. Changes belong in the ABI contract and generator.
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace MarkdownRenderer.Mermaid;

internal enum NativeStatus : int
{
    Success = 0,
    InvalidInput = 1,
    BudgetExceeded = 2,
    Cancelled = 3,
    TimedOut = 4,
    UnsupportedLayout = 5,
    InternalFailure = 6,
    InvalidHandle = 7,
    IncompatibleAbi = 8,
    Panic = 9,
    Busy = 10,
    InvalidScene = 11,
}

[StructLayout(LayoutKind.Sequential, Pack = 8)]
internal struct NativeEngineOptions
{
    internal uint StructSize;
    internal uint AbiVersion;
    internal ulong MaxWorkingMemoryBytes;
    internal uint MaxConcurrentRenders;
    internal uint Reserved;
}

[StructLayout(LayoutKind.Sequential, Pack = 8)]
internal struct NativeRenderOptions
{
    internal uint StructSize;
    internal uint Layout;
    internal uint Theme;
    internal uint MaxSourceBytes;
    internal uint MaxNodes;
    internal uint MaxEdges;
    internal uint MaxDepth;
    internal uint MaxLabelBytes;
    internal uint MaxSceneBytes;
    internal uint DeadlineMilliseconds;
    internal uint Reserved0;
    internal uint Reserved1;
}

internal static unsafe partial class NativeMethods
{
    internal const string LibraryName = "MarkdownRenderer.Mermaid.Native.dll";
    internal const ushort AbiMajor = 1;
    internal const ushort AbiMinor = 0;
    internal const uint PackedAbiVersion = ((uint)AbiMajor << 16) | AbiMinor;

    internal static readonly string[] RequiredExports =
    [
        "mmir_get_abi_version",
        "mmir_engine_create",
        "mmir_engine_release",
        "mmir_cancellation_create",
        "mmir_cancellation_request",
        "mmir_cancellation_release",
        "mmir_render",
        "mmir_buffer_data",
        "mmir_buffer_release",
    ];

    [LibraryImport(LibraryName, EntryPoint = "mmir_engine_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus EngineCreate(
        in NativeEngineOptions options,
        byte* fontCatalog,
        uint fontCatalogLength,
        out nint engine);

    [LibraryImport(LibraryName, EntryPoint = "mmir_engine_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus EngineRelease(nint engine);

    [LibraryImport(LibraryName, EntryPoint = "mmir_cancellation_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CancellationCreate(out nint cancellation);

    [LibraryImport(LibraryName, EntryPoint = "mmir_cancellation_request")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CancellationRequest(nint cancellation);

    [LibraryImport(LibraryName, EntryPoint = "mmir_cancellation_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus CancellationRelease(nint cancellation);

    [LibraryImport(LibraryName, EntryPoint = "mmir_render")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus Render(
        MermaidEngineHandle engine,
        byte* sourceUtf8,
        uint sourceLength,
        in NativeRenderOptions options,
        MermaidCancellationHandle cancellation,
        out nint buffer);

    [LibraryImport(LibraryName, EntryPoint = "mmir_buffer_data")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus BufferData(MermaidBufferHandle buffer, out nint data, out uint length);

    [LibraryImport(LibraryName, EntryPoint = "mmir_buffer_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeStatus BufferRelease(nint buffer);
}
